--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -2,3 +2,16 @@
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
 }
+
+html,
+body {
+  overflow-x: hidden;
+  margin: 0;
+  padding: 0;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
