--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -1,36 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;700&display=swap");
 
-form,
-input {
-  width: 470px;
-  gap: 20px;
-}
-
-input {
-  background-color: #151515;
-  border-bottom: 1px solid #fff;
-  border-top: 2px solid #141414;
-  border-left: 2px solid #141414;
-  border-right: 2px solid #141414;
-  margin-bottom: 20px;
-}
-
-label {
-  color: #d9d9d9;
-  gap: 20px;
-  font-size: 16px;
-  font-family: "Space Grotesk", sans-serif;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  letter-spacing: -0.22px;
-  text-transform: uppercase;
-}
-
 .FooterMainDiv {
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  width: 700px;
 }
 
 .FooterTitle {
@@ -50,45 +24,6 @@ label {
   font-weight: 500;
   line-height: 28px;
   margin-top: 30px;
-}
-
-TextArea,
-#TextArea {
-  width: 100%;
-  background-color: #151515;
-  min-height: 120px;
-  border-bottom: 1px solid #fff;
-  border-top: 2px solid #141414;
-  border-left: 2px solid #141414;
-  border-right: 2px solid #141414;
-}
-
-.FooterBtn {
-  font-family: "Space Grotesk", sans-serif;
-  font-size: 16px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 26px; /* 162.5% */
-  letter-spacing: 2.29px;
-  text-transform: uppercase;
-  border-bottom: 2px solid #4ee1a0;
-  border-top: 2px solid #141414;
-  border-left: 2px solid #141414;
-  border-right: 2px solid #141414;
-  border-radius: 0;
-  background-color: #151515;
-  color: white;
-  margin-top: 32px;
-  width: 218px;
-  padding-bottom: 13px;
-  cursor: pointer;
-  transform: scale(1);
-  transition: 500ms;
-}
-
-.FooterBtn:hover {
-  transform: scale(1.04);
-  transition: 500ms;
 }
 
 .Form {
@@ -120,4 +55,8 @@ TextArea,
 
 .FooterHR {
   margin-top: 10px;
+}
+
+.logoFooterDiv img:hover {
+  opacity: 0.8;
 }
