--- a/src/assets/css/Projects.css
+++ b/src/assets/css/Projects.css
@@ -10,7 +10,6 @@
 .Projects {
   font-family: "Space Grotesk", sans-serif;
   font-size: 72px;
-  font-style: normal;
   font-weight: 700;
   line-height: 72px;
   letter-spacing: -2.05px;
@@ -19,7 +18,6 @@
 .LanguagesUsed {
   font-family: "Space Grotesk", sans-serif;
   font-size: 16px;
-  font-style: normal;
   font-weight: 400;
   line-height: 24px;
   text-transform: uppercase;
@@ -27,8 +25,9 @@
 }
 
 .ProjectsGrid {
+  width: 100%;
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: repeat(3, 1fr);
   gap: 30px;
   margin-bottom: 100px;
 }
@@ -50,7 +49,6 @@
 .CardTitle {
   font-family: "Space Grotesk", sans-serif;
   font-size: 24px;
-  font-style: normal;
   font-weight: 700;
   line-height: 32px;
   text-transform: uppercase;
@@ -65,4 +63,27 @@
 .Langs {
   display: flex;
   gap: 18px;
+}
+
+@media (min-width: 1440px) {
+  .ProjectsGrid {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (max-width: 1439px) and (min-width: 768px) {
+  .ProjectsGrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+@media (max-width: 767px) {
+  .ProjectsGrid {
+    grid-template-columns: 1fr;
+  }
+
+  .CardImage {
+    width: 100%;
+    height: auto;
+  }
 }
