useRef sender :white_check_mark:

--- a/src/assets/css/Footer.css
+++ b/src/assets/css/Footer.css
@@ -60,3 +60,32 @@
 .logoFooterDiv img:hover {
   opacity: 0.8;
 }
+
+.glow a {
+  animation: glow-animation 3s ease-in-out infinite;
+}
+
+@keyframes glow-animation {
+  0% {
+    box-shadow: 0 0 10px rgba(0, 128, 255, 0.8), 0 0 20px rgba(0, 128, 255, 0.6); /* Blue glow */
+  }
+  25% {
+    box-shadow: 0 0 20px rgba(255, 0, 128, 0.8), 0 0 40px rgba(255, 0, 128, 0.6); /* Pink glow */
+  }
+  50% {
+    box-shadow: 0 0 30px rgba(128, 255, 0, 0.8), 0 0 60px rgba(128, 255, 0, 0.6); /* Green glow */
+  }
+  75% {
+    box-shadow: 0 0 20px rgba(255, 128, 0, 0.8), 0 0 40px rgba(255, 128, 0, 0.6); /* Orange glow */
+  }
+  100% {
+    box-shadow: 0 0 10px rgba(0, 128, 255, 0.8), 0 0 20px rgba(0, 128, 255, 0.6); /* Blue glow */
+  }
+}
+
+.logoFooterDiv a {
+  display: inline-block;
+  padding: 5px;
+  border-radius: 50%;
+  transition: box-shadow 1s ease-in-out;
+}
